# node-multiplatform-tauri

./: README.md  eslint.config.js  eslintrc.js  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  build_aarch64.yml
src/: App.tsx  main.tsx
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/shared_utils/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  node_commands.rs
src-tauri/src/error/: errors.rs
src-tauri/src/logger/: logger.rs  mod.rs
src-tauri/src/operations/: mod.rs  node_operations.rs
src-tauri/src/store/: mod.rs  store.rs
src-tauri/src/tray/: menu.rs  mod.rs  tray.rs
src-tauri/src/types/: mod.rs  types.rs
src-tauri/src/utils/: mod.rs  setup.rs  utils.rs
src/components/common/: Button.tsx  Checkbox.tsx  Input.tsx  MessagePopup.tsx  PopupWrapper.tsx
src/components/common/button/: Styled.ts  index.tsx
src/components/common/checkbox/: Styled.ts  index.tsx
src/components/documentation/: Styled.ts  index.tsx
src/components/layout/: Header.tsx
src/components/node/: DeleteNode.tsx  NodeConfig.tsx  NodeControls.tsx  NodeInitializationPopup.tsx  NodeList.tsx  NodeLogs.tsx  SelectedNodeOperations.tsx
src/components/nodeInitPopup/: NodeInitializationPopup.tsx
src/components/nodeList/: Styled.ts  index.tsx
src/hooks/: useNodeManagement.ts
src/pages/: Dashboard.tsx
src/pages/dashboard/: Styled.ts  index.tsx
src/styles/: ButtonStyles.ts  CheckboxStyles.ts  GlobalStyles.ts  InputStyles.ts  NodeControlsStyles.ts
(+23 files in other folders)
