[package]
name = "node-multiplatform-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
tauri = { version = "1" }
dotenv = "0.15.0"
flate2 = "1.0.34"
eyre = "0.6.12"
tar = "0.4.42"
reqwest = "0.12.8"

[dependencies]
chrono = "0.4.38"
lazy_static = "1.5.0"
tauri = { version = "1", features = [ "dialog-message", "shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
toml = "0.8.19"
sysinfo = "0.31.4"
eyre = "0.6.12"
multiaddr = "0.18.2"
dotenv = "0.15.0"
flate2 = "1.0.34"
tar = "0.4.42"
reqwest = "0.12.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
